...
                    defaults.placeholderText = "XXX"
                    defaults.hintText = "Enter your security code"
                    return defaults
                }(),
                actionButton: Theme.ButtonAppearance = {
                    var defaults = GlobalTheme.shared.globalTheme.actionButton
                    defaults.text = "Submit"
                    return defaults
                }(),
                toolbarButton: Theme.ButtonAppearance = GlobalTheme.shared.globalTheme.toolbarButton,
                toggle: Theme.ToggleAppearance = GlobalTheme.shared.globalTheme.toggle,
                toggleText: Theme.TextAppearance = GlobalTheme.shared.globalTheme.toggleText,
                linkText: Theme.TextAppearance = GlobalTheme.shared.globalTheme.linkText) {
...
